# CGV-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TESTS.md  TODOs.md  index.html
.cargo/: config.toml
cgv/: Cargo.toml  build.rs  index.html  katex-header.html
cgv-build/: Cargo.toml
cgv-build/cert/: miniserve.crt  miniserve.key
cgv-build/src/: build_script_debug.rs  build_util.rs  lib.rs  setup.rs  shaderprep.rs
cgv-build/src/shader/: mod.rs  package.rs  program.rs
cgv-build/web/: index.html  slang-interface.js  wasm-setup.js  wasm-setup_slang.js
cgv-derive/: Cargo.toml
cgv-derive/src/: lib.rs
cgv-rs/: Cargo.toml
cgv-rs-sample/: Cargo.toml
cgv-rs-sample/src/: lib.rs
cgv-rs/res/: site.webmanifest
cgv-rs/src/view/: mod.rs
cgv-runenv/: Cargo.toml
cgv-runenv/src/: lib.rs
cgv-sample/: Cargo.toml  build.rs
cgv-sample/shader/: example.slang
cgv-sample/shader/traj/: shader.wgsl
cgv-sample/src/: lib.rs  main.rs
cgv-shader/: Cargo.toml
cgv-shader/shader/tests/: multiple_entrypoints.slang
cgv-shader/src/: environment.rs  lib.rs  pak.rs  program.rs  slang.rs
cgv-shader/src/_doc/: _InvalidEntryPoint_withString.md
cgv-shader/src/compile/: component.rs  environment.rs  mod.rs  model.rs  module.rs
cgv-shader/src/slang/: context.rs  mod.rs  native.rs  program.rs  wasm.rs
cgv-shader/src/slang/context/: mod.rs  native.rs  wasm.rs
cgv-shader/src/tests/: mod.rs  slang.rs
cgv-shader/src/tests/compile/: environment.rs  mod.rs
cgv-util/: Cargo.toml  build.rs
cgv-util/src/: ds.rs  fs.rs  lib.rs  math.rs  meta.rs  notsafe.rs  path.rs  tagged_ptr.rs  test.rs  unique.rs
cgv-util/src/ds/: borrow_vec.rs  mod.rs  ref_vec.rs  unique_vec.rs
cgv-util/src/tests/: math.rs  mod.rs  tagged_ptr.rs
cgv-util/src/tests/ds/: mod.rs  ref_vec.rs  unique_vec.rs
cgv-util/src/tests/notsafe/: mod.rs  strided_iter.rs
cgv/_/: clear.rs  context.rs  egui.rs
cgv/_/hal/: mod.rs
cgv/_/view/: monocamera.rs
cgv/shader/common/: compositing.wgsl  noop.wgsl
cgv/shader/gpu/: mipmapgen.slang  mipmapgen.wgsl
cgv/shader/gpu/mipmapgen/: box_polyphase.slang  filter_polyphasebox.wgsl
cgv/shader/lib/api/: cgv_api_uniforms.slang
cgv/shader/lib/cgv/: meta.slang  prelude.slang
cgv/shader/lib/cgv/api/: uniforms.slang
cgv/shader/lib/cgv/color/: blending.slang
cgv/shader/lib/cgv/geom/: aabox.slang  billboard.slang  common.slang
cgv/shader/lib/cgv/geom/intersect/: common.slang
cgv/shader/lib/cgv/geom/splat/: hermite.slang  sphere.slang
cgv/shader/lib/cgv/gpu/: filter.slang
cgv/shader/lib/cgv/gpu/filter/: boxpolyphase.slang  kernel.slang
cgv/shader/lib/cgv/lin/: common.slang  operators.slang  transform.slang
cgv/shader/lib/cgv/math/: curves.slang  field.slang  functions.slang  misc.slang  polynomial.slang  util.slang
cgv/shader/lib/cgv/math/lin/: common.slang  inverse.slang  operators.slang  transform.slang
cgv/shader/lib/cgv/media/: geom.slang  texture.slang  util.slang
cgv/shader/lib/gpu/filter/: cgv_gpu_filter.slang  cgv_gpu_filter_boxpolyphase.slang
cgv/shader/lib/lin/: cgv_lin_operators.slang  cgv_lin_transform.slang
cgv/shader/player/: viewport.slang
cgv/shader/renderer/: sphere.slang  spheres.slang  tubes.slang
cgv/src/: clear.rs  context.rs  egui.rs  env.rs  lib.rs  player.rs  renderstate.rs
cgv/src/data/: mod.rs  transferfunc.rs
cgv/src/gpu/: mipmap.rs  mod.rs
cgv/src/gpu/DEPRECATED_data/: mod.rs  wgslequiv.rs
cgv/src/gpu/DEPRECATED_data/transferfunc/: builtin.rs  mod.rs
cgv/src/gpu/data/: mod.rs
cgv/src/gpu/data/transferfunc/: builtin.rs  mod.rs
cgv/src/gui/: control.rs  layout.rs  layouts.rs  mod.rs  widget.rs
cgv/src/gui/_doc/: ControlTable_lhsWidth.md  ControlTable_rhsWidth.md
cgv/src/hal/: framebuffer.rs  mod.rs  shaderprog.rs  texture.rs  uniformgroup.rs
cgv/src/hal/_doc/: _texture_defaultMipmapping.md  _texture_specialUsageFlagsMipmapping.md
cgv/src/math/: mod.rs  vector.rs
cgv/src/player/: font.rs  mod.rs  panes.rs  rendersetup.rs  ui.rs  viewportcompositor.rs
cgv/src/render/: mod.rs  posdata.rs
cgv/src/renderer/: data.rs  mod.rs
cgv/src/renderer/data/: gpu.rs  guarantees.rs  host.rs  mod.rs
cgv/src/renderer/data/gpu/: interleaved_buffer.rs  mod.rs
cgv/src/renderer/data/guarantees/: mod.rs  normals.rs  tangents.rs
cgv/src/renderer/data/host/: guarantees.rs  mod.rs
cgv/src/renderer/spheres/: data.rs  mod.rs
cgv/src/renderer/spheres/_doc/: _spheres_layoutRemarks.md
cgv/src/tests/: mod.rs
cgv/src/tests/renderer/: data.rs  data_host.rs  host_data.rs  mod.rs
cgv/src/util/: ds.rs  math.rs  mod.rs  notsafe.rs
cgv/src/util/widgets/: mod.rs
cgv/src/view/: cameraparameters.rs  mod.rs  monocamera.rs  orbitcamera.rs  orbitinteractor.rs  wasdinteractor.rs
cgv/web/: index.html  site.webmanifest
examples/basic/: Cargo.toml  build.rs
examples/basic/shader/: example.slang
examples/basic/src/: main.rs
examples/renderers/: Cargo.toml  build.rs
examples/renderers/src/: helpers.rs  main.rs
examples/shaders/: Cargo.toml  build.rs
examples/shaders/shader/: sdf_demo.slang  sdfquad.slang  user.slang
examples/shaders/shader/lib/: common.slang  glyph.slang  sdf.slang
examples/shaders/src/: main.rs  slang_completer.rs
res/src/: favicon.xcf
shader/traj/: shader.wgsl
src/: lib.rs  main.rs  renderstate.rs
src/hal/: mod.rs
src/state/: mod.rs
src/util/: math.rs  mod.rs
src/view/: mod.rs  orbitcamera.rs
