
[workspace]
members = ["cgv", "cgv-build", "cgv-sample"]
default-members = ["cgv", "cgv-sample"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["CGV Lab"]
readme = "README.md"
description = "A high performance, web-enabled rapid prototyping framework for computer graphics and visualization research."
license = "MIT"
license-file = "LICENSE"

[profile.release]
opt-level = 3
lto = true
