
[workspace]
members = ["cgv", "cgv-build", "cgv-sample"]
default-members = ["cgv", "cgv-sample"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["CGV Lab"]
readme = "README.md"
description = "A high performance, web-enabled rapid prototyping framework for computer graphics and visualization research."
license = "MIT"
license-file = "LICENSE"

[profile.release]
opt-level = 3
lto = true
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).

[profile.dev.package."*"]
opt-level = 3  # We don't need debug stuff in the dependencies by default

[profile.release.package."*"]
opt-level = 3
