
[workspace]
members = [
    "cgv", "cgv-build", "cgv-runenv", "cgv-shader", "cgv-util", "vendor/egui_code_editor", "examples/basic",
    "examples/shaders"
]
default-members = ["cgv"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["CGV Lab"]
readme = "README.md"
description = "A high performance, web-enabled rapid prototyping framework for computer graphics and visualization research."
license = "MIT"
license-file = "LICENSE"

[profile.dev]
incremental = false  # Don't use incremental compilation to enable full use of sccache

[profile.dev.build-override]
debug = true
incremental = false  # Don't use incremental compilation to enable full use of sccache

[profile.release]
opt-level = 3
lto = true
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).
incremental = false  # Don't use incremental compilation to enable full use of sccache

[profile.dev.package."*"]
opt-level = 3  # We don't need debug stuff in the dependencies by default
incremental = false  # Don't use incremental compilation to enable full use of sccache

[profile.release.package."*"]
opt-level = 3
incremental = false  # Don't use incremental compilation to enable full use of sccache

[workspace.dependencies]
anyhow = "*"
tracing = "*"
tracing-subscriber = {version="*"}
eframe = {version="*", default-features=false}  # git="https://github.com/emilk/egui.git"
egui-wgpu = {version="*", default-features=false}
wgpu = {version="*", default-features=false}
egui = "*"
egui_extras = "*"
