
[package]
name = "cgv-build"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
ctor = "*"
cargo_metadata = "*"
anyhow = "*"
reqwest = {version="*", features=["blocking"]}
zip-extract = "*"
bytes = "*"
slang = {git="https://github.com/brussig-tud/slang-rs.git", features=[
	"copy_libs", "download_slang_binaries", "build_slang_from_source"
]}
cgv-util = {path="../cgv-util"}

[features]
default = ["buildScriptUsage"]
buildScriptUsage = []
copy_libs = ["slang/copy_libs"]
