
[package]
name = "cgv-build"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
ctor = "*"
cargo_metadata = "*"
anyhow = "*"
reqwest = {version="*", features=["blocking"]}
zip-extract = "*"
bytes = "*"
cgv-util = {path="../cgv-util"}
cgv-shader = {path="../cgv-shader", features=["slang_programs"]}

[features]
default = []
copy_libs = ["cgv-shader/copy_libs"]
