
[package]
name = "cgv-build"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
ctor = "*"
cargo_metadata = "*"
anyhow = "*"
serde = {version="*", features = ["derive"]}
serde_json = "*"
serde_yaml_ng = "*"
fs-set-times = "*"
reqwest = {version="*", features=["blocking"]}
zip = "6"
bytes = "*"
cgv-util = {path="../cgv-util"}
cgv-runenv = {path="../cgv-runenv"}
cgv-shader = {path="../cgv-shader", features=["slang_runtime"]}

[features]
default = []
