
[package]
name = "cgv-sample"
version.workspace = true
edition.workspace = true

[package.metadata]
nice-name = "CGV-rs Example"
#short-nice-name = "CGV-rs"    # if not specified, will just be the same as `nice-name`
#web-favicon-srcdir = "CGV-rs" # relative to the crate's manifest file (i.e. this Cargo.toml). We don't ship our own
                               # though, so we don't actually define it, this is just here for documentation purposes.
[dependencies]
cgv = {path="../cgv", features=["slang_runtime", "copy_libs"]} #

[build-dependencies]
cgv-build = {path="../cgv-build", features=["copy_libs"]}

[features]
default = ["wayland", "x11"]
wayland = ["cgv/wayland"]
x11 = ["cgv/x11"]
