[package]
name = "cgv-shader"
version.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = {version="*", optional=true}
tracing = {version="*", optional=true}
wgpu = {version="27.*", optional=true, features=["spirv"]}
anyhow = "*"
uuid = "*"
crc64fast-nvme = "*"
cgv-util = {path="../cgv-util"}

[target.'cfg(not(target_os="windows"))'.dependencies]
shader-slang = {git="https://github.com/brussig-tud/slang-rs.git", optional=true, features=[
	"download_slang_binaries", "build_slang_from_source"
]}

[target.'cfg(target_os="windows")'.dependencies]
shader-slang = {git="https://github.com/brussig-tud/slang-rs.git", optional=true}

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = {version="*", optional=true}

[features]
default = []
tracing_output = ["dep:tracing"]
wgpu_runtime = ["dep:wgpu", "dep:tracing"]
slang_runtime = ["dep:shader-slang", "dep:wasm-bindgen", "shader-slang/copy_libs"]
