[package]
name = "cgv-shader"
version.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = {version="*", optional=true}
tracing = {version="*", optional=true}
wgpu = {version="27", optional=true, features=["spirv"]}
anyhow = "*"
bitcode = "*"
serde = {version="*", optional=true}
postcard = {version="*", optional=true, features=["alloc"]}
crc64fast-nvme = "*"
cgv-util = {path="../cgv-util"}

[target.'cfg(all(not(target_arch="wasm32"),not(target_os="windows")))'.dependencies]
shader-slang = {git="https://github.com/brussig-tud/slang-rs.git", optional=true, features=[
	"download_slang_binaries", "build_slang_from_source"
]}

[target.'cfg(all(not(target_arch="wasm32"),target_os="windows"))'.dependencies]
shader-slang = {git="https://github.com/brussig-tud/slang-rs.git", optional=true}

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = {version="*", optional=true}
shader-slang = {git="https://github.com/brussig-tud/slang-rs.git", optional=true, features=[
	"build_slang_from_source"
]}

[features]
default = []
#tracing_output = ["dep:tracing"]
wgpu_runtime = ["dep:wgpu", "dep:tracing"]
compilation = ["dep:serde", "dep:postcard", "cgv-util/serde"]
slang_runtime = [
	"compilation", "dep:wasm-bindgen", "dep:shader-slang", "shader-slang/copy_libs", "shader-slang/serde",
	"shader-slang/com_impls"
]
