[package]
name = "cgv-util"
version.workspace = true
edition.workspace = true

[dependencies]
ordered-float = "*"
anyhow = "*"
normalize-path = "*"
serde = {version="*", optional=true}
uuid = "*"
nalgebra-glm = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
uuid = {version="*", features=["js"]}

[features]
default = []
serde = ["dep:serde", "uuid/serde"]
