[package]
name = "cgv-util"
version.workspace = true
edition.workspace = true

[dependencies]
ordered-float = "*"
anyhow = "*"
normalize-path = "*"
serde = {version="*", optional=true}
uuid = {version="*", features=["v4", "v5"]}
nalgebra-glm = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
uuid = {version="*", features=["v4", "v5", "js"]}

[dev-dependencies]
serde_json = "*"

[features]
default = []
serde = ["dep:serde", "uuid/serde"]
