
[package]
name = "cgv"
version.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "*"
tracing = "*"
tracing-subscriber = {version="*", features=["env-filter"]}
cfg-if = "*"
ctor = "*"
arrayvec = "*"
dashmap = "*"
web-time = "*"
winit = "*"
egui = {git="https://github.com/emilk/egui.git", default-features=true, features=[
	"color-hex", "rayon"
]}
egui_extras = {git="https://github.com/emilk/egui.git", default-features=true, features=[
	"all_loaders", "datepicker", "syntect"
]}
wgpu = {version="27", features=["spirv"] }
eframe = {git="https://github.com/emilk/egui.git", default-features=false, features=[
	"default_fonts", "wgpu"
]}
image = {version="*", default-features=false, features=["png", "jpeg"]}
#webbrowser = "*"
nalgebra = "*"
nalgebra-glm = "*"
alum = "*"
cgv-util = {path="../cgv-util"}
cgv-runenv = {path="../cgv-runenv"}
cgv-shader = {path="../cgv-shader", features=["wgpu_runtime"]}

[target.'cfg(target_os="windows")'.dependencies]
ansi_term = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
console_error_panic_hook = "*"
tracing-wasm = "*"
wasm-bindgen-futures = "*"
getrandom = {version="0.3", default-features=true, features=["wasm_js"]}
#web-sys = {version="*", features=["Document", "Element", "Window", "DomQuad", "DomRect"]}
wgpu = {version="27", default-features=false, features=["webgpu", "spirv"]}
egui-wgpu = {git="https://github.com/emilk/egui.git", default-features=false, features=[
	"fragile-send-sync-non-atomic-wasm"
]}

[build-dependencies]
cgv-build = {path="../cgv-build"}

[features]
default = ["wayland", "x11"]
build_script_debug = []
slang_runtime = ["cgv-shader/slang_runtime"]
wayland = ["eframe/wayland"]
x11 = ["eframe/x11"]
