
[package]
name = "cgv"
version.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true, features=["env-filter"]}
cfg-if = "*"
ctor = "*"
arrayvec = "*"
dashmap = "*"
web-time = "*"
eframe = {workspace=true, features=["default_fonts", "wgpu"]}
winit = "*"
wgpu = {workspace=true, features=["spirv"] }
egui = {workspace=true, default-features=true, features=[
	"serde", "color-hex", "rayon"
]}
egui_extras = {workspace=true, default-features=true, features=[
	"all_loaders", "datepicker", "syntect"
]}
image = {version="*", default-features=false, features=["png", "jpeg"]}
#webbrowser = "*"
nalgebra = "*"
nalgebra-glm = "*"
alum = "*"
cgv-util = {path="../cgv-util"}
cgv-runenv = {path="../cgv-runenv"}
cgv-shader = {path="../cgv-shader", features=["wgpu_runtime"]}

[target.'cfg(target_os="windows")'.dependencies]
ansi_term = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
console_error_panic_hook = "*"
tracing-wasm = "*"
wasm-bindgen-futures = "*"
getrandom = {version="0.3", default-features=true, features=["wasm_js"]}
#web-sys = {version="*", features=["Document", "Element", "Window", "DomQuad", "DomRect"]}
egui-wgpu = {workspace=true, features=["fragile-send-sync-non-atomic-wasm"]}
wgpu = {workspace=true, default-features=false, features=["webgpu", "spirv"]}

[build-dependencies]
cgv-build = {path="../cgv-build"}

[features]
default = ["wayland", "x11"]
build_script_debug = []
slang_runtime = ["cgv-shader/slang_runtime"]
wayland = ["eframe/wayland"]
x11 = ["eframe/x11"]
