
[package]
name = "cgv"
version.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = {workspace=true, features = []}
anyhow = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true, features=["env-filter"]}
cfg-if = "*"
ctor = "*"
arrayvec = {workspace=true}
dashmap = "*"
rand = {workspace=true}
rand_distr = {workspace=true}
web-time = "*"
eframe = {workspace=true, features=["default_fonts", "wgpu"]}
winit = "*"
wgpu = {workspace=true, features=["spirv"] }
egui = {workspace=true, default-features=true, features=[
	"serde", "color-hex", "rayon"
]}
egui_extras = {workspace=true, default-features=true, features=[
	"all_loaders", "datepicker", "syntect"
]}
image = {version="*", default-features=false, features=["png", "jpeg"]}
#webbrowser = "*"
nalgebra = {workspace=true}
nalgebra-glm = {workspace=true}
alum = {workspace=true}
cgv-util = {path="../cgv-util"}
cgv-runenv = {path="../cgv-runenv"}
cgv-derive = {path= "../cgv-derive" }
cgv-shader = {path="../cgv-shader", features=["wgpu_runtime"]}

[target.'cfg(target_os="windows")'.dependencies]
ansi_term = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
console_error_panic_hook = "*"
tracing-wasm = "*"
wasm-bindgen-futures = {workspace=true}
getrandom = {version="0.3", default-features=true, features=["wasm_js"]}
#web-sys = {version="*", features=["Document", "Element", "Window", "DomQuad", "DomRect"]}
egui-wgpu = {workspace=true, features=["fragile-send-sync-non-atomic-wasm"]}
wgpu = {workspace=true, default-features=false, features=["webgpu", "spirv"]}

[build-dependencies]
cgv-build = {path="../cgv-build"}

[features]
default = ["wayland", "x11"]
build_script_debug = ["cgv-build/build_script_debug"]
slang_runtime = ["cgv-shader/slang_runtime"]
wayland = ["eframe/wayland"]
x11 = ["eframe/x11"]
