
[package]
name = "ex-shaders"
version.workspace = true
edition.workspace = true

[package.metadata]
nice-name = "CGV-rs Shader Example"
short-nice-name = "CGV-rs Shaders"

[dependencies]
cgv = {path="../../cgv", default-features=false, features=["slang_runtime"]} # we need the Slang runtime for online
                                                                             # compilation of our editable shaders
syntect = {version="*", default-features = false, features = ["default-fancy"]}
egui_code_editor = {path="../../vendor/egui_code_editor"}

[build-dependencies]
cgv-build = {path="../../cgv-build"}

[features]
default = ["wayland", "x11"]
build_script_debug = []
wayland = ["cgv/wayland"]
x11 = ["cgv/x11"]
